--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,9 +20,7 @@ permissions:
 
 jobs:
   publish:
-
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
   
@@ -51,10 +49,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - publish
-
     permissions:
       id-token: write
-
     # Dedicated environments with protections for publishing are strongly recommended.
     environment:
       # Official release
@@ -64,14 +60,15 @@ jobs:
       #
       # Test release
       name: testpypi
-      url: https://test.pypi.org/project/fitout/
-      
+      url: https://test.pypi.org/project/fitout/     
     steps:
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
         with:
           name: release-dists
           path: dist/
-
       - name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@3e4f5a6b7c8d9e0f1a2b3c4d5e6f7a8b9c0d1e2f
+        uses: pypa/gh-action-pypi-publish@release/v1
+        # test
+        with:
+          repository-url: https://test.pypi.org/legacy/
