--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,7 +19,7 @@ permissions:
   contents: read
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -48,19 +48,19 @@ jobs:
   pypi-publish:
     runs-on: ubuntu-latest
     needs:
-      - publish
+      - build
     permissions:
       id-token: write
     # Dedicated environments with protections for publishing are strongly recommended.
     environment:
       # Official release
-      # name: pypi
+      name: pypi
       # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/project/fitout/
+      url: https://pypi.org/project/fitout/
       #
       # Test release
-      name: testpypi
-      url: https://test.pypi.org/project/fitout/     
+      # name: testpypi
+      # url: https://test.pypi.org/project/fitout/     
     steps:
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
@@ -69,6 +69,6 @@ jobs:
           path: dist/
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        # test
-        with:
-          repository-url: https://test.pypi.org/legacy/
+        # # test
+        # with:
+        #   repository-url: https://test.pypi.org/legacy/
