--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -54,13 +54,13 @@ jobs:
     # Dedicated environments with protections for publishing are strongly recommended.
     environment:
       # Official release
-      # name: pypi
+      name: pypi
       # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/project/fitout/
+      url: https://pypi.org/project/fitout/
       #
       # Test release
-      name: testpypi
-      url: https://test.pypi.org/project/fitout/     
+      # name: testpypi
+      # url: https://test.pypi.org/project/fitout/     
     steps:
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
@@ -70,5 +70,5 @@ jobs:
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         # # test
-        with:
-          repository-url: https://test.pypi.org/legacy/
+        # with:
+        #   repository-url: https://test.pypi.org/legacy/
